Sep 01, 2013 - chris ---------------------------------------------------
o issue 27: No longer enabling AES encryption if openssl headers
	are missing

Aug 22, 2013 - chris ---------------------------------------------------
o Cleaned up the configure.ac script
o Cleaned up the file format; the new format is no longer compatible.
	See the README file for more information and how to upgrade.
o Cleaned up the configure.ac script

Aug 23, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.2

Aug 21, 2013 - chris ---------------------------------------------------
o Fixed spurious failures of the java unittests

Aug 06, 2013 - chris ---------------------------------------------------
o issue #25: tcmalloc is now disabled on MacOS

Jul 24, 2013 - chris ---------------------------------------------------
o Rewrote client/server implementation
	- using libuv instead of mongoose
	- using tcp instead of http (and removing the dependency to libcurl)

Jul 21, 2013 - chris ---------------------------------------------------
o Added new configure option --without-tcmalloc
o issue #23, #25: Fixed linking problems regarding tcmalloc_minimal.so
	(Thanks, Johnathan Conley and brancaleone)

Jul 19, 2013 - chris ---------------------------------------------------
o issue #24: Fixed compilation problem on MacOS (Thanks, Johnathan Conley)

Jul 15, 2013 - chris ---------------------------------------------------
o ham_env_close now truncates the file size and removes unused pages at the
	end of the file

Jun 27, 2013 - chris ---------------------------------------------------
o issue #17: configure.in checks now for (hopefully) correct boost version

Jun 26, 2013 - chris ---------------------------------------------------
o Added tracking of internal metrics, exported via ham_env_get_metrics
	(declared in ham/hamsterdb_int.h)

Jun 25, 2013 - chris ---------------------------------------------------