@@ -2,6 +2,9 @@ Sep 01, 2013 - chris ---------------------------------------------------
 o issue 27: No longer enabling AES encryption if openssl headers
 	are missing
 
+Aug 25, 2013 - chris ---------------------------------------------------
+o Persistent freelist statistics data is now endian clean
+
 Aug 22, 2013 - chris ---------------------------------------------------
 o Cleaned up the configure.ac script
 o Cleaned up the file format; the new format is no longer compatible.
